--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <a href="https://github.com/shiromi415/website/1.html" class="button" target="_blank">回主頁</a>
+    <a href="https://github.com/shiromi415/website/1" class="button" target="_blank">回主頁</a>
 </body>
 </html>
