--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>站點1</title>
+    <title>主頁</title>
     <style>
         .button {
             display: inline-block;
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <a href="https://github.com/shiromi415/website/1" class="button" target="_blank">回主頁</a>
+    <a href="https://github.com/shiromi415/website/1" class="button" target="_blank">前往1站點</a>
 </body>
 </html>
