--- a/1.html
+++ b/1.html
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <a href="https://github.com/shiromi415/website/" class="button" target="_blank">回主頁</a>
+    <a href="https://shiromi415.github.io/website/" class="button" target="_blank">回主頁</a>
 </body>
 </html>
