--- a/1.html
+++ b/1.html
@@ -21,9 +21,15 @@
         .button:hover {
             background-color: #0056b3;
         }
+
+        .large-text {
+            font-size: 48px; /* Adjust the size as needed */
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
-    <a href="https://shiromi415.github.io/website/index" class="button" target="_blank">回主頁</a>
+    <p class="large-text">你好</p>
+    <a href="https://shiromi415.github.io/website/index" class="button">回主頁</a>
 </body>
 </html>
