--- a/1.html
+++ b/1.html
@@ -29,7 +29,8 @@
     </style>
 </head>
 <body>
-    <p class="large-text">你好</p>
+    <p class="large-text">公告</p>
+    <p>這是一篇公告</p>
     <a href="https://shiromi415.github.io/website/index" class="button">回主頁</a>
 </body>
 </html>
