--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <a onclick="window.open('url','_self')" class="button">前往1站點</a >
+    <a onclick="window.open('url','https://shiromi415.github.io/website/1')" class="button">前往1站點</a >
 </body>
 </html>
