--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     </style>
 </head>
 <body>
-    <a onclick="window.open('url','https://shiromi415.github.io/website/1.html')" class="button">前往1站點</a>
+    <a href="https://shiromi415.github.io/website/index" class="button">前往1站點</a>
 </body>
 </html>
