--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 </head>
 <body>
     <a onclick="window.open('https://shiromi415.github.io/website/1.html','_self')" class="button">前往1站點</a >
+    <a onclick="window.open('https://shiromi415.github.io/website/2.html','_self')" class="button">前往自我介紹</a >
 </body>
 </html>
