--- a/2.html
+++ b/2.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>自我介紹</title>
+
 <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
 
 <p>你好我是庫咪,2005-4-15（19歲）🇹🇼台灣人</p>
