--- a/2.html
+++ b/2.html
@@ -4,7 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自我介紹</title>
+<style>
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: #fff;
+            background-color: #007bff;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 5px;
+            border: none;
+            cursor: pointer;
+        }
 
+        .button:hover {
+            background-color: #0056b3;
+        }
+
+        .large-text {
+            font-size: 48px; /* Adjust the size as needed */
+            font-weight: bold;
+        }
+    </style>
 <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
 
 <p>你好我是庫咪,2005-4-15（19歲）🇹🇼台灣人</p>
