--- a/2.html
+++ b/2.html
@@ -58,7 +58,7 @@
 
 	<p>&bull;雀魂麻將(UID:12518681)、</p>
 
-	<p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://shiromi415.github.io/website/index" target="_blank"><img alt="" src="https://media.discordapp.net/attachments/1280041550038175859/1280041572074913802/image.png?ex=66d6a31c&amp;is=66d5519c&amp;hm=a690dc1cf166cadddd9d44c576c9baf34cb07780a9a3189f3348b89cd2061499&amp;=&amp;format=webp&amp;quality=lossless&amp;width=79&amp;height=41" style="height:41px; width:79px" /></a></p>
+	<p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
 	</li>
 </ul>
 
