--- a/2.html
+++ b/2.html
@@ -10,7 +10,7 @@
             padding: 10px 20px;
             font-size: 16px;
             color: #fff;
-            background-color: #007bff;
+            background-color: #9F4D95;
             text-align: center;
             text-decoration: none;
             border-radius: 5px;
