--- a/2.html
+++ b/2.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自我介紹</title>
-<style>
+    <style>
+        body {
+    background-image: url('https://media.discordapp.net/attachments/1280041550038175859/1281265723360018444/FB_IMG_1725468580835.png?ex=66db1731&is=66d9c5b1&hm=e35bb1e305cdd265523a4c9fe103f626b41d79f4aa1d0c2ecdaebe86747dda76&=&format=webp&quality=lossless&width=873&height=492');
+    background-size: cover; /* 确保图片覆盖整个背景 */
+    background-position: center; /* 图片居中 */
+    }
+
+
         .button {
             display: inline-block;
             padding: 10px 20px;
@@ -23,43 +30,50 @@
         }
 
         .large-text {
-            font-size: 48px; /* Adjust the size as needed */
+            font-size: 48px; /* 调整大小 */
             font-weight: bold;
         }
+
+        img {
+            max-width: 100%; /* 确保图片不会超出容器 */
+            height: auto; /* 让图片保持比例 */
+        }
+
+        /* 设置容器的最大宽度 */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: rgba(255, 255, 255, 0.8); /* 轻微透明的背景 */
+            border-radius: 10px;
+        }
     </style>
-<p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
+</head>
+<body>
+    <div class="container">
+        <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
+        <p>你好我是庫咪,2005-4-15（19歲）🇹🇼台灣人</p>
 
-<p>你好我是庫咪,2005-4-15（19歲）🇹🇼台灣人</p>
+        <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">Discord</a></p>
 
-<p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">Discord</a></p>
-
-<ul>
-	<li>
-	<h2><strong><span style="font-size:18px">雷點與可能雷你的地方</span></strong></h2>
-
-	<p>✥&bull;雷點&bull;✥</p>
-
-	<p>要本照、然後謝絕詐騙,詐騙死光光！</p>
-
-	<p>好了目前想不到ㄌ</p>
-
-	<p>✥&bull;可能雷你&bull;✥</p>
-
-	<p>顏文字、w、偶爾小黃臉</p>
-	</li>
-	<li>
-	<h2><strong><span style="font-size:18px">✥&bull;遊戲&bull;✥</span></strong></h2>
-
-	<p>&bull;第五人格(UID:6890552)</p>
-
-	<p>&bull;荒野亂鬥&amp;破壞突擊隊(UID:kumina)</p>
-
-	<p>&bull;Sky光&bull;遇</p>
-
-	<p>&bull;雀魂麻將(UID:12518681)、</p>
-
-	<p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
-	</li>
-</ul>
-
-<p><span style="font-size:22px"><strong><img alt="" src="https://scontent.fkhh1-2.fna.fbcdn.net/v/t39.30808-6/457405081_122172217412242210_4341322725934590359_n.jpg?stp=dst-jpg_p526x296&amp;_nc_cat=104&amp;ccb=1-7&amp;_nc_sid=833d8c&amp;_nc_ohc=yuOjtxvWFWMQ7kNvgHutk2W&amp;_nc_ht=scontent.fkhh1-2.fna&amp;oh=00_AYDeexga55a0-cMC0ng_IkdKX4PAl75Dml5Mz3j1Y99gAw&amp;oe=66DB29AD" style="height:530px; width:526px" /></strong></span></p>
+        <ul>
+            <li>
+                <h2><strong><span style="font-size:18px">雷點與可能雷你的地方</span></strong></h2>
+                <p>✥&bull;雷點&bull;✥</p>
+                <p>要本照、然後謝絕詐騙,詐騙死光光！</p>
+                <p>好了目前想不到ㄌ</p>
+                <p>✥&bull;可能雷你&bull;✥</p>
+                <p>顏文字、w、偶爾小黃臉</p>
+            </li>
+            <li>
+                <h2><strong><span style="font-size:18px">✥&bull;遊戲&bull;✥</span></strong></h2>
+                <p>&bull;第五人格(UID:6890552)</p>
+                <p>&bull;荒野亂鬥&amp;破壞突擊隊(UID:kumina)</p>
+                <p>&bull;Sky光&bull;遇</p>
+                <p>&bull;雀魂麻將(UID:12518681)、</p>
+                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
+            </li>
+        </ul>
+    </div>
+</body>
+</html>
