--- a/2.html
+++ b/2.html
@@ -71,9 +71,10 @@
                 <p>&bull;荒野亂鬥&amp;破壞突擊隊(UID:kumina)</p>
                 <p>&bull;Sky光&bull;遇</p>
                 <p>&bull;雀魂麻將(UID:12518681)、</p>
-                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
+                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             </li>
         </ul>
+<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
     </div>
 </body>
 </html>
