--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </style>
 </head>
 <body>
-    <a onclick="window.open('https://shiromi415.github.io/website/1.html','_self')" class="button">前往1站點</a >
-    <a onclick="window.open('https://shiromi415.github.io/website/2.html','_self')" class="button">前往自我介紹</a >
+    <a onclick="window.open('https://shiromi415.github.io/website/1','_self')" class="button">前往1站點</a >
+    <a onclick="window.open('https://shiromi415.github.io/website/2','_self')" class="button">前往自我介紹</a >
 </body>
 </html>
