--- a/2.html
+++ b/2.html
@@ -7,9 +7,10 @@
     <style>
         body {
     background-image: url('https://media.discordapp.net/attachments/1280041550038175859/1281265723360018444/FB_IMG_1725468580835.png?ex=66db1731&is=66d9c5b1&hm=e35bb1e305cdd265523a4c9fe103f626b41d79f4aa1d0c2ecdaebe86747dda76&=&format=webp&quality=lossless&width=873&height=492');
-    background-size: cover; /* 确保图片覆盖整个背景 */
-    background-position: center; /* 图片居中 */
-    }
+    background-size: cover; 
+    background-position: center;
+    background-attachment: fixed; /* 讓背景固定 */
+}
 
 
         .button {
