--- a/2.html
+++ b/2.html
@@ -31,16 +31,16 @@
         }
 
         .large-text {
-            font-size: 48px; /* 调整大小 */
+            font-size: 48px; /* 調整大小 */
             font-weight: bold;
         }
 
         img {
-            max-width: 100%; /* 确保图片不会超出容器 */
-            height: auto; /* 让图片保持比例 */
+            max-width: 100%; /* 確保圖片不會超出容器 */
+            height: auto; /* 让圖片保持比例 */
         }
 
-        /* 设置容器的最大宽度 */
+        /* 設置容器的最大寬度 */
         .container {
             max-width: 1200px;
             margin: 0 auto;
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
-        <p>你好我是庫咪,2005-4-15（19歲）🇹🇼台灣人</p>
+        <p>你好我是庫咪,2005-4-15（19歲）</p>
 
         <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">Discord</a></p>
 
