--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>主頁</title>
     <style>
         body {
-    background-image: url('https://media.discordapp.net/attachments/1280041550038175859/1281265723360018444/FB_IMG_1725468580835.png?ex=66db1731&is=66d9c5b1&hm=e35bb1e305cdd265523a4c9fe103f626b41d79f4aa1d0c2ecdaebe86747dda76&=&format=webp&quality=lossless&width=873&height=492');
+    background-image: url('https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg');
     background-size: cover; 
     background-position: center;
     background-attachment: fixed; /* 讓背景固定 */
