--- a/2.html
+++ b/2.html
@@ -75,7 +75,7 @@
                 <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
             </li>
         </ul>
-<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a></p>
+<a href="https://shiromi415.github.io/website/index" class="button">回主頁</a>
 <a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a>
     </div>
 </body>
