--- a/1.html
+++ b/1.html
@@ -54,6 +54,6 @@
     <p class="large-text">公告</p>
     <p>這是一篇公告</p>
     <a href="https://shiromi415.github.io/website/index" class="button">回主頁</a>
-<a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a></p>
+    <a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a>
 </body>
 </html>
