--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     </style>
 </head>
 <body>
-    <a onclick="window.open('https://shiromi415.github.io/website/1','_self')" class="button">前往1站點</a >
-    <a onclick="window.open('https://shiromi415.github.io/website/2','_self')" class="button">前往自我介紹</a >
+    <a onclick="window.open('https://shiromi415.github.io/web/1','_self')" class="button">前往1站點</a >
+    <a onclick="window.open('https://shiromi415.github.io/web/2','_self')" class="button">前往自我介紹</a >
 <a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a>
 </body>
 </html>
