--- a/2.html
+++ b/2.html
@@ -55,7 +55,7 @@
         <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
         <p>你好我是庫咪,2005-4-15（19歲）</p>
 
-        <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">Discord</a></p>
+        <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">不和諧(藍色小螃蟹)</a></p>
 
         <ul>
             <li>
