--- a/2.html
+++ b/2.html
@@ -76,7 +76,7 @@
             </li>
         </ul>
 <a href="https://shiromi415.github.io/web" class="button">回主頁</a>
-<a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a>
+<a href="https://bsky.app/profile/haosov.bsky.social/post/3kr7u5ehdpt27" class="button">背景圖源</a>
     </div>
 </body>
 </html>
