--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     <a onclick="window.open('https://shiromi415.github.io/web/1','_self')" class="button">前往1站點</a >
     <a onclick="window.open('https://shiromi415.github.io/web/2','_self')" class="button">前往自我介紹</a >
     <a onclick="window.open('https://shiromi415.github.io/web/3','_self')" class="button">好網站</a >
-<a href="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" class="button">背景圖源</a>
+<a href="https://bsky.app/profile/haosov.bsky.social/post/3kr7u5ehdpt27" class="button">背景圖源</a>
 </body>
 </html>
