--- a/1.html
+++ b/1.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>站點1</title>
+    <meta property="og:title" content="庫咪的小窩" />
+<meta property="og:description" content="自我介紹" />
+<meta property="og:image" content="https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg" />
+<meta property="og:url" content="https://shiromi415.github.io/web/2" />
     <style>
         body {
     background-image: url('https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg');
