--- a/1.html
+++ b/1.html
@@ -6,7 +6,7 @@
     <title>站點1</title>
     <meta property="og:title" content="庫咪的小窩" />
 <meta property="og:description" content="自我介紹" />
-<meta property="og:image" content="https://media.discordapp.net/attachments/1280041550038175859/1285876633038884914/1726251364579.jpg?ex=66ebdd6f&is=66ea8bef&hm=cdf83fe1d4375f5da70b7711a2d53d8ad84a3d213ef4e8385f6db64e58a3e75b&" />
+<meta property="og:image" content="https://media.discordapp.net/attachments/1280041550038175859/1285876633038884914/1726251364579.jpg" />
 <meta property="og:url" content="https://shiromi415.github.io/web/2" />
     <style>
         body {
