--- a/3.html
+++ b/3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>自動跳轉網頁</title>
+    <title>非常好網頁使我麥克風旋轉</title>
     <script type="text/javascript">
         window.onload = function() {
             // 設定跳轉網址
