--- a/3.html
+++ b/3.html
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         window.onload = function() {
             // 設定跳轉網址
-            var targetURL = "https://youtu.be/dQw4w9WgXcQ?si=gI_KIQIHK24vlztr";
+            var targetURL = "https://b23.tv/fiScqpQ";
             // 立即跳轉
             window.location.href = targetURL;
         }
