--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             border: none;
             cursor: pointer;
         }
-
+        .button {
+  margin-bottom: 15px; /* 調整垂直間距 */
+        }
         .button:hover {
             background-color: #0056b3;
         }
