--- a/2.html
+++ b/2.html
@@ -54,9 +54,8 @@
     <div class="container">
         <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
         <p>你好我是庫咪,2005-4-15（19歲）</p>
-
+        <p>興趣:玩遊戲 看動漫 發廢文</p>
         <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">不和諧(藍色小螃蟹)</a></p>
-
         <ul>
             <li>
                 <h2><strong><span style="font-size:18px">雷點與可能雷你的地方</span></strong></h2>
@@ -67,12 +66,12 @@
                 <p>顏文字、w、偶爾小黃臉</p>
             </li>
             <li>
-                <h2><strong><span style="font-size:18px">✥&bull;遊戲&bull;✥</span></strong></h2>
+                <h2><strong><span style="font-size:18px">✥遊戲✥</span></strong></h2>
                 <p>&bull;第五人格(UID:6890552)</p>
-                <p>&bull;荒野亂鬥&amp;破壞突擊隊(UID:kumina)</p>
-                <p>&bull;Sky光&bull;遇</p>
+                <p>&bull;荒野亂鬥(UID:kumina)</p>
+                <p>&bull;Sky光•遇</p>
                 <p>&bull;雀魂麻將(UID:12518681)、</p>
-                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)
             </li>
         </ul>
 <a href="https://shiromi415.github.io/web" class="button">回主頁</a>
