--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 <body>
     <a onclick="window.open('https://shiromi415.github.io/web/1','_self')" class="button">page1</a >
     <a onclick="window.open('https://shiromi415.github.io/web/2','_self')" class="button">自我介紹</a >
+    <a onclick="window.open('https://shiromi415.github.io/web/audio','_self')" class="button">Audio</a >
 <a href="https://bsky.app/profile/haosov.bsky.social/post/3kr7u5ehdpt27" class="button">背景圖</a>
 </body>
 </html>
