--- a/audio.html
+++ b/audio.html
@@ -53,13 +53,13 @@
 </head>
 <body>
     <div class="player">
-        <h1>簡易音樂播放器</h1>
+        <h1>音樂播放器</h1>
         
         <!-- 音樂選單 -->
         <label for="song-select">選擇一首歌曲：</label>
         <select id="song-select" onchange="changeSong()">
-            <option value="YOASOBI-勇者.mp3">YOASOBI-勇者</option>
-            <option value="Blue Archive-Pixel time.mp3">Blue Archive-Pixel time</option>
+            <option value="songs/YOASOBI-勇者.mp3">YOASOBI-勇者</option>
+            <option value="songs/Blue Archive-Pixel time.mp3">Blue Archive-Pixel time</option>
         </select>
 
         <!-- 音樂播放器 -->
