--- a/audio.html
+++ b/audio.html
@@ -58,8 +58,8 @@
         <!-- 音樂選單 -->
         <label for="song-select">選擇一首歌曲：</label>
         <select id="song-select" onchange="changeSong()">
-            <option value="songs/YOASOBI-勇者.mp3">YOASOBI-勇者</option>
-            <option value="songs/Blue Archive-Pixel time.mp3">Blue Archive-Pixel time</option>
+            <option value="songs/song1.mp3">YOASOBI-勇者</option>
+            <option value="songs/song2.mp3">Blue Archive-Pixel time</option>
         </select>
 
         <!-- 音樂播放器 -->
