--- a/audio.html
+++ b/audio.html
@@ -69,7 +69,7 @@
         </audio>
     </div>
 
-    <script src="script.js"></script> <!-- JavaScript 檔案 -->
+    <script src="audio.js"></script> <!-- JavaScript 檔案 -->
 </body>
 <a onclick="window.open('https://shiromi415.github.io/web/index','_self')" class="button">回主頁</a >
 </html>
