--- a/2.html
+++ b/2.html
@@ -67,11 +67,12 @@
             </li>
             <li>
                 <h2><strong><span style="font-size:18px">✥遊戲✥</span></strong></h2>
-                <p>&bull;第五人格(UID:6890552)</p>
-                <p>&bull;荒野亂鬥(UID:kumina)</p>
-                <p>&bull;Sky光•遇</p>
-                <p>&bull;雀魂麻將(UID:12518681)、</p>
-                <p>&bull;Minecraft(JAVA:KumiiTWT、BE:coco415tw)
+                <p>&bull;第五人格：6890552</p>
+                <p>&bull;荒野亂鬥：kumina</p>
+                <p>&bull;Sky光•遇：加好友請私</p>
+                <p>&bull;雀魂麻將：12518681</p>
+                <p>&bull;Minecraft：je和be都玩</p>
+                <p>&bull;神魔之塔：922146935</p>
             </li>
         </ul>
 <a href="https://shiromi415.github.io/web" class="button">回主頁</a>
