--- a/2.html
+++ b/2.html
@@ -6,12 +6,12 @@
     <title>自我介紹</title>
     <style>
         body {
-    background-image: url('https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg');
-    background-size: cover; 
-    background-position: center;
-    background-attachment: fixed; /* 讓背景固定 */
-}
-
+            background-image: url('https://cdn.bsky.app/img/feed_thumbnail/plain/did:plc:d5zipqbkdnyxurrm2pcr7mc2/bafkreiamaeo76vt2yfoz4ixiadaebym5ifnm7p7uyvlge4rfwjbs7tu7qa@jpeg');
+            background-size: cover; 
+            background-position: center;
+            background-attachment: fixed; /* 讓背景固定 */
+            line-height: 1.5; /* 調整整體行距 */
+        }
 
         .button {
             display: inline-block;
@@ -47,6 +47,10 @@
             padding: 20px;
             background-color: rgba(255, 255, 255, 0.8); /* 轻微透明的背景 */
             border-radius: 10px;
+        }
+
+        p {
+            line-height: 1.4; /* 調整段落行距 */
         }
     </style>
 </head>
