--- a/2.html
+++ b/2.html
@@ -59,7 +59,7 @@
         <p><span style="font-size:22px"><strong>自我介紹</strong></span></p>
         <p>你好我是庫咪,2005-4-15（19歲）</p>
         <p>興趣:玩遊戲 看動漫 發廢文</p>
-        <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">不和諧(藍色小螃蟹)</a></p>
+        <p><a href="https://twitter.com/shiromi415" target="_blank">Twitter(X)</a>&nbsp;&nbsp;<a href="https://www.youtube.com/channel/UC9Tv0vm-iSxyxiQch2CkYWw" target="_blank">Youtube</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://discord.gg/u53GGkgtxQ" target="_blank">不和諧(藍色小螃蟹)</a>&nbsp;&nbsp;<a href="https://www.facebook.com/shiromi0415?mibextid=ZbWKwL" target="_blank">Facebook</a>&nbsp;&nbsp;<a href="https://bsky.app/profile/shiromi415.bsky.social" target="_blank">藍天</a></p>
         <ul>
             <li>
                 <h2><strong><span style="font-size:18px">雷點與可能雷你的地方</span></strong></h2>
