--- a/2.html
+++ b/2.html
@@ -81,6 +81,7 @@
         </ul>
 <a href="https://shiromi415.github.io/web" class="button">回主頁</a>
 <a href="https://bsky.app/profile/haosov.bsky.social/post/3kr7u5ehdpt27" class="button">背景圖源</a>
+<a href="https://linktr.ee/shiromi415" class="button">bsky</a>
     </div>
 </body>
 </html>
