--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </style>
 </head>
 <body>
-    <a onclick="window.open('https://shiromi415.github.io/web/1','_self')" class="button">page1</a >
-    <a onclick="window.open('https://shiromi415.github.io/web/2','_self')" class="button">自我介紹</a >
-    <a onclick="window.open('https://shiromi415.github.io/web/audio','_self')" class="button">Audio</a >
+    <a onclick="window.open('https://shiromi415.github.io/web/1','_self')" class="button">page1</a>
+    <a onclick="window.open('https://shiromi415.github.io/web/2','_self')" class="button">自我介紹</a>
+    <a href="https://linktr.ee/shiromi415" class="button">bsky</a>
 <a href="https://bsky.app/profile/haosov.bsky.social/post/3kr7u5ehdpt27" class="button">背景圖</a>
 </body>
 </html>
